Add LICENSE file and update index.html with licensing information

--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
         <li><a href="FLIQC_controller_core/index.html">FLIQC_controller_core Documentation</a></li>
         <li><a href="robot_env_evaluator/index.html">robot_env_evaluator Documentation</a></li>
     </ul>
+    <div>
+        <p>
+            These documentations are licensed under 
+            <a href="https://creativecommons.org/licenses/by-sa/4.0/">
+                CC BY-SA 4.0
+                <img src="https://licensebuttons.net/l/by-sa/4.0/88x31.png" alt="CC BY-SA 4.0">
+            </a>.
+        </p>
+    </div>
 </body>
 </html>
